roles/kubernetes/files/pods/nginx.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: tls-secret
          mountPath: "/etc/nginx/ssl"
          readOnly: true
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: tls-secret
        secret:
          secretName: kubernetes-jokester-cloud-tls
      - name: nginx-config-volume
        configMap:
          name: nginx-config
