roles/kubernetes/files/pods/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: 'kubernetes.jokester.cloud'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  - host: 'kubernetes.stage.jokester.cloud'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-stage
            port:
              number: 80
  tls:
  - hosts:
    - 'kubernetes.jokester.cloud'
    - 'kubernetes.stage.jokester.cloud'
    secretName: kubernetes-jokester-cloud-tls
